# normalization

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  app_launcher.py  pyproject.toml  requirements.txt  setup.py
resources/: Info.plist.template  README.md  icon.icns
scripts/: build_and_sign.sh  build_icon.py
src/: __init__.py  __main__.py  app.py  config.py  history.py  jobqueue.py  log.py  normalizer.py  watcher.py  webapp.py
tests/: test_audio_simulation.py  test_edge_cases.py  test_normalizer.py
web/: app.js  charlie.js  index.html  styles.css
