[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "charlufs"
version = "1.2.0"
description = "CharLUFS — macOS desktop app that loudness-normalizes audio files dragged onto it. Originals preserved in 'char backup'."
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
