[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "charlufs"
version = "1.4.1"
description = "CharLUFS — macOS desktop app that loudness-normalizes audio files dragged onto it. Linear gain when possible; transparent peak limiting only when needed to reach target under the true-peak ceiling. Originals preserved in 'CharBackup'."
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
